[tool.poetry]
name = "gen3authz"
version = "3.0.0"
description = "Gen3 authz client"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
cdiserrors = "<2.0.0"
backoff = ">=2.2.1,<3.0.0"
httpx = ">=0.20.0,<1.0.0"
six = "^1.16.0"
sniffio = ">=1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
mock = "^4.0.2"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.12.0"
truffleHog = "^2.1.11"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
