[tool.poetry]
name = "gen3authz"
version = "1.0.0-beta.1"
description = "Gen3 authz client"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
cdiserrors = {version = "^1.0.0-beta.1", allow-prereleases = true}
backoff = "~=1.6"
httpx = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mock = "^4.0.2"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.12.0"
truffleHog = "^2.1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
